--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,7 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}<hr>
-            <form>
+            <form id="form-1">
                 <input placeholder="Location">
                 <button>Search</button>
             </form>
