--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>about</title>
+        <title>About</title>
         <link rel="icon" href="/images/weather.png">
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <div class="main-content">
             {{>header}}<hr>
+             <p>This is a basic weather forecast website. It uses data from weathertack.com and mapbox.com!</p>
         </div>
+
+       
 
         {{>footer}}
     </body>
