--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}<hr>
+            <p id="instruction">Enter the location below, to see the forecast.</p>
             <form id="form-1">
                 <input placeholder="Location">
                 <button>Search</button>
