--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 h1,h2{
-    color:#f0edede1;
+    color:#3b3535e1;
 }
 
 footer{
@@ -32,10 +32,13 @@ header a{
     margin-right: 20px;
     font-size: medium;
     font-size: 18px;
-}
+    color:#5677c2e1}
 
 #form-1{
     margin-top : 20px;
+}
+#instruction{
+    margin: 10px 0px 20px 0px;
 }
 
 input{
